# ftp_server

./: README.md
client/: CMakeLists.txt
client/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
client/bulid/common/: Makefile  cmake_install.cmake
client/common/: common.c  common.h
client/data/: checkme
client/include/: datatype.h
client/src/: client.c
server/: CMakeLists.txt  tmp.txt
server/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
server/bulid/common/: Makefile  cmake_install.cmake
server/common/: CMakeLists.txt  common.c  common.h
server/include/: color.h  datatype.h  head.h  ls.h
server/src/: ls.c  server.c
